--- a/Blog/appsettings.json
+++ b/Blog/appsettings.json
@@ -6,8 +6,11 @@
     }
   },
   "DatabaseConfig": {
-    "UseInMemoryDatabase": false, // como se hace para que esto llegue a la clase? es decir que utilice la clase de data memoruArticleRepository
+    "UseInMemoryDatabase": false,
     "DefaultConnectionString": "DataSource=blog.db"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Blog;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
