ya se agrego lo de github

--- a/Blog/appsettings.json
+++ b/Blog/appsettings.json
@@ -12,5 +12,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Blog;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Authentication": {
+    "GitHub": {
+      "ClientId": "Ov23lisuxIu4Ua31Iqis",
+      "ClientSecret": "1905dd7cc4daa10319bc705eccf6fdb373cedf5c"
+    }
   }
 }
